# learning_rust

./: .gitignore  Cargo.toml
Section_2/assignment/src/: main.rs
Section_2/control_flow/src/: main.rs
Section_2/data_types/src/: main.rs
Section_2/functions/src/: main.rs
Section_2/variables/src/: main.rs
Section_3/ownership/src/: main.rs
chat/: Cargo.toml
chat/src/: utils.rs
cli/src/: find_and_replace.rs
section_10/src/: lib.rs
section_12/assignment/src/: main.rs
section_12/src/: main.rs
section_13/assignment/: Cargo.toml
section_13/assignment/src/: main.rs
section_13/src/: main.rs
section_14/assignment/: Cargo.toml
section_14/assignment/src/: main.rs
section_14/src/: main.rs
section_15/assignment/: Cargo.toml
section_15/assignment/src/: main.rs
section_15/macros/macro_ex/: Cargo.toml
section_15/macros/src/: lib.rs
section_15/src/: main.rs
section_16/src/: main.rs
section_17/: Cargo.toml
section_17/src/: main.rs
section_20/assignment/: Cargo.toml
section_20/assignment/src/: main.rs
section_20/factorial/src/: main.rs
section_21/src/: main.rs
section_22/src/: lib.rs
section_23/src/: lib.rs
section_24/src/: lib.rs
section_25/src/: lib.rs
section_26/src/: lib.rs
section_27/src/: lib.rs
section_28/src/: lib.rs
section_4/assignment/: Cargo.toml
section_5/assignment/: Cargo.toml
section_6/assignment/: Cargo.toml
section_6/src/: main.rs
section_8/: Cargo.toml
section_8/src/: main.rs
section_9/src/: main.rs
wasm-game-of-life/: Cargo.toml  LICENSE_MIT
wasm-game-of-life/src/: lib.rs
(+12 files in other folders)
