[package]
name = "LEARN_RUST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "Section_2/*",
    "Section_3/*",
    "Section_3/ownership/assignment",
    "section_4/*",
    "section_5/*",
    "section_6",
    "section_6/assignment",
    "section_7/*",
    "section_8",
    "section_9",
    "cli",
    "section_10",
    "section_12",
    "section_12/assignment",
    "section_13",
    "section_13/assignment",
    "section_14",
    "section_14/assignment",
    "section_15",
    "section_15/assignment",
    "section_15/macros",
    "section_15/macros/macro_ex",
    "section_16",
    "section_17",
    "chat",
    "wasm-game-of-life",
    "section_20",
    "section_20/assignment",
    "section_20/factorial",
    "section_20/fibonacci",
    "section_20/palindrome",
    "section_20/tower_of_hanoi",
    "section_21",
    "section_22",
    "section_23",
    "section_24",
    "section_25",
    "section_26",
]
